2017-01-06	<fgndevelop@posteo.org>	
		- changed MAN_DATE to reflect the modification time of the man page body
		  for the demo man page, the date gets hardcoded into the payload
		- Tanja added

2017-01-05	<fgndevelop@posteo.org>	
		- working on the demo man page led to the removal of the mmr utility
		  the entire man page business has been simplified and is now dealt with
		  by the Makefile itself. Goodbye mmr.

2017-01-01	<fgndevelop@posteo.org>	
		- moved the template Makefiles from sfw/tmpl to sfw/make so we can
		  provide scripts with a parsed, ready to use custom Makefile in sfw/make
		  rather than leaving it in the sfw directory
		- changed mmr to create a rule for the provided sample man page when 
		  it cannot find a custom man page
		- default man page body resides in sfw/man now (for good)

2016-12-24	<fgndevelop@posteo.org>	
		- the "sfw/man/default" directory is removed, it's pointless. The
		  default files (header, footer) go to "sfw/man", the default man page
 		  goes to the script's toplevel directory 

2016-12-23	<fgndevelop@posteo.org>	
		- renamed the whole thing from sfw to frwk-sh as the abbreviation
		  "sfw" turned out to be a bit too popular. So the utility is called
		  frwk-sh, the subdirectory with the framework files is still called
		  sfw but is hidden now (it's only edited for developing purpose, anyway)

2016-12-22	<fgndevelop@posteo.org>	
		- renamed the "sfw" folder to "framework" (in the source code, that is)
		- renamed the "sfw_init" folder to "cli"
		- renamed the "sfw_init" tool to "sfw"
		- changed the custom Makefile logic to simply include "Makefile.custom"
		  if it is present

2016-11-05	<fgndevelop@posteo.org>	
  		- removed _sfw_ifs from sfw/header/02_constants.sh as this is 
                  a relict and no longer in use
  		- added the cmdline to the bug report
		- modified sfw/lib/sfw_cli.sh to return the correct option name
		  when a long option's argument is appended to the option with "="
