@@ -1,3 +1,9 @@
+2017-01-12	<fgndevelop@posteo.org>	
+		- Modified the Makefile.custom process to export TOPLEVEL and SCRIPT_CODE
+		- both the 'SCRIPT_CODE' and the 'clean' target are now conditionally 
+		  included when MAKEFILE_CUSTOM exists
+		- Makefile.custom no longer requires parsing by frwk-sh
+
 2017-01-06	<fgndevelop@posteo.org>	
 		- changed MAN_DATE to reflect the modification time of the man page body
 		  for the demo man page, the date gets hardcoded into the payload
